syntax = "proto3";
package com.omniview.pluginsdk;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

import "proto/resource.proto";

option go_package = "./proto";

message Session {
  string id = 1;
  bool attached = 2;
  repeated string command = 3;
  map<string, string> params = 4;
  map<string, string> labels = 5;
  google.protobuf.Timestamp created_at = 6;
}

message SessionOptions {
  string id = 1;
  repeated string command = 2;
  bool tty = 3;
  map<string, string> params = 4;
  map<string, string> labels = 5;
  string resource_plugin = 6;
  string resource_key = 7;
  google.protobuf.Struct resource_data = 8;
}

message ExecHandler {
  string plugin = 1;
  string resource = 2;
  ResourceActionTargetBuilder target_builder = 3;
}

// ===================== REQUESTS/RESPONSES ===================== //

message GetSupportedResourcesResponse {
  repeated ExecHandler handlers = 1;
}

message CreateSessionRequest {
  string id = 1;
  string command = 2;
  bool tty = 3;
  map<string, string> params = 4;
  map<string, string> labels = 5;
}

message CreateSessionResponse {
  Session session = 1;
  bool success = 2;
  string error = 3;
}

message GetSessionRequest {
  string id = 1;
}

message GetSessionResponse {
  Session session = 1;
  bool success = 2;
  string error = 3;
}

message ListSessionsResponse {
  repeated Session sessions = 1;
  bool success = 2;
  string error = 3;
}

message AttachSessionRequest {
  string id = 1;
}

message AttachSessionResponse {
  Session session = 1;
  bytes buffer = 2;
}

message CloseSessionRequest {
  string id = 1;
}

message CloseSessionResponse {
  bool success = 1;
  string error = 2;
}

message ResizeSessionRequest {
  string id = 1;
  int32 rows = 2;
  int32 cols = 3;
}

message ResizeSessionResponse {
  bool success = 1;
  string error = 2;
}

// ===================== STREAMS  ===================== //

message StreamInput {
  string id = 1;
  bytes data = 2;
}

message StreamOutput {
  enum Target {
    STDOUT = 0;
    STDERR = 1;
  }
  string id = 1;
  Target target = 2;
  bytes data = 3;
  StreamSignal signal = 4;
}

enum StreamSignal {
  NONE = 0;
  CLOSE = 1;
  SIGINT = 2;
  SIGQUIT = 3;
  SIGTERM = 4;
  SIGKILL = 5;
  SIGHUP = 6;
  SIGUSR1 = 7;
  SIGUSR2 = 8;
  SIGWINCH = 9; 
}

service ExecPlugin {
  rpc GetSupportedResources(google.protobuf.Empty) returns (GetSupportedResourcesResponse);
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
  rpc ListSessions(google.protobuf.Empty) returns (ListSessionsResponse);
  rpc CreateSession(SessionOptions) returns (CreateSessionResponse);
  rpc AttachSession(AttachSessionRequest) returns (AttachSessionResponse);
  rpc DetachSession(AttachSessionRequest) returns (AttachSessionResponse);
  rpc CloseSession(CloseSessionRequest) returns (CloseSessionResponse);
  rpc ResizeSession(ResizeSessionRequest) returns (ResizeSessionResponse);

  // Multiplexed stream for input and output
  rpc Stream(stream StreamInput) returns (stream StreamOutput);
}
